...

class ShippingMethodViewController: BaseViewController, DeliveryTypeViewDelegate {

    init(dependencies: AppDependencies, deliveryInformation: DeliveryInformation) {
        let headerView: HeaderView = {
            let headerView = HeaderView()
            headerView.setTitle("Способ отправки")
            return headerView
        }()
        
        super.init(dependencies: dependencies, iconImage: "cross.pdf", headerView: headerView, deliveryInformation: deliveryInformation)
    }
    
...
