...
        calculateButton.addTarget(self, action: #selector(showShippingMethodScreen), for: .touchUpInside)
        self.calculateButton.setTitle(Localized.calcAction, for: .normal)
        self.calculateButton.setTitleColor(.white, for: .normal)
        self.calculateButton.titleLabel?.font = .systemFont(ofSize: 18, weight: .semibold)
        self.calculateButton.backgroundColor = UIColor(named: "ButtonColor")
        self.calculateButton.layer.cornerRadius = 30
        self.calculateButton.accessibilityIdentifier = "calc.primaryAction"
    }
    
    @objc func showShippingMethodScreen() {
        let shippingMethodViewController = ShippingMethodViewController(dependencies: dependencies, deliveryInformation: deliveryInformation)
        let navController = UINavigationController(rootViewController: shippingMethodViewController)
        navController.modalPresentationStyle = .fullScreen
...
